tests/test168.rael.exp
Error [1:1]: 'skip' is outside of a loop
| skip
| ^
